--- a/MedicalLink/ChucNang/SuaPhieuCDDV/ucSuaPhieuCDDV.resx
+++ b/MedicalLink/ChucNang/SuaPhieuCDDV/ucSuaPhieuCDDV.resx
@@ -149,6 +149,16 @@
         tWvj31ZJAgQSCGgnZXa9tURARboRuSy3y863TKDUibOrI4Wb7iT/AGcZ7VCFlQM4AAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="repositoryItemButtonDelete.Buttons" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAADgSURBVDhPlVPRCoJAEDz8mJAIvzHpUaKHiD4tIiSihx76CJux3XPNvdOE4fRuZ1x3xhBwbUNX
+        AlegBrjlXjwDdsAFWPVFQn5h7QSNJyLkvakjp6RAazZVhIWxC4esdTcKWFU94NqLZMisabTg5HShIofE
+        2TF2iZsCOCcKbVd6zxeOB/2HyJSsUgtE0mSxlDNJfXMcbC4kObJrsYZp7s2/gxxyMuMznUm5802sZNuz
+        ikTam7O4psDd8Z/TLha401JgA7yNyJAwM27pxCaWnLUOscLDk9meJGwsov/OA3UVjz4sEcMoDKUhHQAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="imMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
