--- a/MedicalLink/BaoCao/BCPhauThuatThuThuat/BCPhauThuatThuThuat.resx
+++ b/MedicalLink/BaoCao/BCPhauThuatThuThuat/BCPhauThuatThuThuat.resx
@@ -148,6 +148,9 @@
         whP2+COYy8PdkuBek8v6aWI+v4mpSEY5/0X6Bq9FqScWGipzAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>151, 6</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>33</value>
   </metadata>
