--- a/MedicalLink/FormCommon/TabCaiDat/ucQuanLyNguoiDung.resx
+++ b/MedicalLink/FormCommon/TabCaiDat/ucQuanLyNguoiDung.resx
@@ -209,6 +209,26 @@
         8gfjWGx8fu1KdwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="repositoryItemCheckEdit7.PictureChecked" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAAhdEVYdFRpdGxlAEFwcGx5O09LO0NoZWNrO0JhcnM7
+        UmliYm9uO2RjyGgAAACuSURBVDhPY/j//z8DJZgizSCLMQwoWz6dgQjMCFNDjgEeQM3HgFgIZAipBoA0
+        /wDi/0B8HIgZSTEAWTPIEE8MFwAFmHH4H6tmFAOAHGUgvgHEDmiG4NQMNwDI4ATiu1C/fUUyBK9mdBcE
+        AwV+IhlSjRRgID+DDMOIYpRABCoIQjIEFNIgjFMzrmhENgTkInBo48K4ohFkyGcg9sGnGZcLYLaJEtKM
+        1QBScybFuREAWFJgqnQrrYkAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="gridColumn14.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAAhdEVYdFRpdGxlAEFwcGx5O09LO0NoZWNrO0JhcnM7
+        UmliYm9uO2RjyGgAAACuSURBVDhPY/j//z8DJZgizSCLMQwoWz6dgQjMCFNDjgEeQM3HgFgIZAipBoA0
+        /wDi/0B8HIgZSTEAWTPIEE8MFwAFmHH4H6tmFAOAHGUgvgHEDmiG4NQMNwDI4ATiu1C/fUUyBK9mdBcE
+        AwV+IhlSjRRgID+DDMOIYpRABCoIQjIEFNIgjFMzrmhENgTkInBo48K4ohFkyGcg9sGnGZcLYLaJEtKM
+        1QBScybFuREAWFJgqnQrrYkAAAAASUVORK5CYII=
+</value>
+  </data>
   <metadata name="imMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>179, 14</value>
   </metadata>
